<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <ImageView
        android:id="@+id/imgChoiceIcon"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon200" />

    <TextView
        android:id="@+id/tvChoiceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_to_pdf_reader"
        android:textColor="@color/textColor1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvChoiceMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/set_default_launcher_message"
        android:textColor="@color/textColor2"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonSetDefaultLauncher"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/set_default_launcher" />

    <Button
        android:id="@+id/buttonOpenPdf"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/skip_default_launcher" />

</LinearLayout>