<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:tag="layout/activity_intro_0"
        android:background="@color/intro_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:src="@drawable/intro_image"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_weight="2" />

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_gravity="center"
                android:text="@string/pdf_signature"
                style="@style/TextViewBold" />

            <TextView
                android:textColor="@color/textColor2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/intro_text"
                android:lineSpacingExtra="@dimen/_5sdp"
                style="@style/TextViewRegular" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvStart"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:cardBackgroundColor="@color/textColor3"
            app:contentPadding="@dimen/_4sdp"
            style="@style/CardViewCommon">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:text="@string/start"
                    style="@style/TextViewBold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
